@@ -196,6 +196,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #17536: Add to webbrowser's browser list: www-browser, x-www-browser,
+  iceweasel, iceape.
+
 - Issue #17488: Change the subprocess.Popen bufsize parameter default value
   from unbuffered (0) to buffering (-1) to match the behavior existing code
   expects and match the behavior of the subprocess module in Python 2 to avoid
